--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,10 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-lib_deps = cytrontechnologies/Cytron Motor Drivers Library@^1.0.1
+monitor_speed = 115200
+
+# 書き込みモードをQIOにする QIO: 4bit, QOUT: 1bit, DIO: 2bit, DOUT: 2bit
+board_build.flash_mode = qio
+
+# 書き込み速度を80MHzにする 40MHz, 80MHz
+board_build.flash_freq = 80m
